--- a/career/app/globals.css
+++ b/career/app/globals.css
@@ -14,7 +14,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #5dff55;
     --foreground: #ededed;
   }
 }
